--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,14 @@
 
     <groupId>cn.watson.rent</groupId>
     <artifactId>rent-root</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>common</module>
+        <module>service</module>
+        <module>dao</module>
+        <module>web</module>
+    </modules>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
