--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,9 @@
         <module>dao</module>
         <module>web</module>
     </modules>
+    <properties>
+        <lombok.version>1.16.8</lombok.version>
+    </properties>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -24,11 +27,20 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>1.3.1</version>
+        </dependency>
+
+        <!-- lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
         </dependency>
     </dependencies>
 
