--- a/web/pom.xml
+++ b/web/pom.xml
@@ -9,7 +9,15 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>controller</artifactId>
+    <artifactId>web</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>cn.watson.rent</groupId>
+            <artifactId>service</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+    </dependencies>
 
 </project>
