--- a/web/src/main/resources/Application.properties
+++ b/web/src/main/resources/Application.properties
@@ -11,3 +11,4 @@ spring.datasource.initial-size=5
 
 server.session.timeout=10
 server.tomcat.uri-encoding=UTF-8
+#logging.config=classpath:log4j2.xml
