proxy AOP 和反射复习

--- a/java_exercise/pom.xml
+++ b/java_exercise/pom.xml
@@ -13,6 +13,14 @@
 
     <dependencies>
 
+        <!-- https://mvnrepository.com/artifact/cglib/cglib -->
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>3.2.6</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
