--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,12 @@
             <version>${fastjson.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>3.3.0</version>
+            <type>pom</type>
+        </dependency>
 
     </dependencies>
 
