--- a/web/pom.xml
+++ b/web/pom.xml
@@ -17,6 +17,12 @@
             <artifactId>service</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-mongodb</artifactId>
+            <version>3.0.0.RELEASE</version>
+        </dependency>
+
 
     </dependencies>
 
